add/update - components && services

--- a/src/app/tenant/containers/tenant-detail/tenant-detail.component.html
+++ b/src/app/tenant/containers/tenant-detail/tenant-detail.component.html
@@ -1,1 +1,5 @@
-<p>tenant-detail works!</p>
+<app-tenant-form
+  [loading]="loading | async"
+  [tenant]="tenant | async"
+  (submitForm)="save($event)"
+></app-tenant-form>
