update - tenant detail service and components

--- a/src/app/tenant/views/tenant-form/tenant-form.component.html
+++ b/src/app/tenant/views/tenant-form/tenant-form.component.html
@@ -13,7 +13,7 @@
     <button type="submit">Submit</button>
   </form>
 
-  <pre>
+  <pre *ngIf="tenant">
     <div>Tenant:</div>
     {{ tenant | json }}
   </pre>
